# boss-mcp-job-hunting

./: .gitignore  README.md  pyproject.toml
src/boss_mcp_job_hunting/: __init__.py  server.py
